<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/nav_header_height"
    android:background="@drawable/backgroundhouse"
    android:gravity="bottom"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"

    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <ImageView
        android:id="@+id/fotousr"
        android:layout_width="105dp"
        android:layout_height="105dp"
        android:contentDescription="@string/nav_header_desc"
        android:paddingTop="10dp"
        app:srcCompat="@drawable/usuariotemp" />

    <TextView
        android:id="@+id/Usuario"
        android:layout_width="150dp"
        android:layout_height="20dp"
        android:textSize="11dp"
        android:textColor="#ffff"
        android:paddingTop="@dimen/nav_header_vertical_spacing"
        android:text="@string/nav_header_title"
        android:background="@color/design_default_color_primary"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

    <TextView
        android:id="@+id/correo"
        android:layout_width="150dp"
        android:layout_height="20dp"
        android:textColor="#ffff"
        android:textSize="10dp"
        android:text="@string/nav_header_subtitle"
        android:background="@color/design_default_color_primary"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

</LinearLayout>
